--- a/02_scraping/lab_notebook.ipynb
+++ b/02_scraping/lab_notebook.ipynb
@@ -1775,6 +1775,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "*Now let's use my data from Craiglist looking at apartments in central Virginia area for lab 02.*"
+      ],
+      "metadata": {
+        "id": "N8ke7ZRwIrsE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 1. Let's look at the saved data\n",
@@ -2117,12 +2126,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "mAEK3vP6zkF5",
-        "outputId": "6bb62765-75b1-4002-aa55-159252d355f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        }
+        },
+        "id": "mAEK3vP6zkF5",
+        "outputId": "6bb62765-75b1-4002-aa55-159252d355f6"
       },
       "execution_count": 100,
       "outputs": [
@@ -2447,12 +2456,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "i3cgqGYp0A_5",
-        "outputId": "3e44e51e-ffc2-43b9-fdb0-9b37983803c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 583
-        }
+        },
+        "id": "i3cgqGYp0A_5",
+        "outputId": "3e44e51e-ffc2-43b9-fdb0-9b37983803c4"
       },
       "execution_count": 101,
       "outputs": [
@@ -2491,12 +2500,12 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "CAzeFyNY0STc",
-        "outputId": "fd50460d-b9e1-4897-8c50-1c6c04f140b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "CAzeFyNY0STc",
+        "outputId": "fd50460d-b9e1-4897-8c50-1c6c04f140b5"
       },
       "execution_count": 102,
       "outputs": [
@@ -2872,12 +2881,12 @@
         "sns.move_legend(PxC, \"upper left\", bbox_to_anchor=(1, 1))"
       ],
       "metadata": {
-        "id": "83vYyRo_4jEn",
-        "outputId": "f7168dc4-ce5d-4270-8e6a-f115112ba5a0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "83vYyRo_4jEn",
+        "outputId": "f7168dc4-ce5d-4270-8e6a-f115112ba5a0"
       },
       "execution_count": 103,
       "outputs": [
